<?xml version="1.0"?>
<package format="2">
  <name>rviz_helper_plugin</name>
  <version>0.0.1</version>
  <description>RViz helper plugin</description>

  <author>Nick Baddorf</author>
  <maintainer email="nbaddorf@gmail.com">Nick Baddorf</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>class_loader</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>

